# kg-rag

./: .env  .gitignore  README.md  kg-rag.txt  literature_review.md  pyproject.toml  requirements.txt
.github/workflows/: blog.yml  code_checks.yml
assets/: diagram.html
blog/: package-lock.json  package.json  webpack.config.js
blog/src/: index.ejs  style.css
blog/static/: references.bib
data/sec-10-q/: questions_with_rag_answers.csv  synthetic_qna_data_7_gpt4o.csv  synthetic_qna_data_7_gpt4o_v2_mod1_50.csv
kg_rag/configs/: baseline-kgrag.json  entity-based-kgrag.json
kg_rag/evaluation/: hyperparameter_configs.json  hyperparameter_search.py  run_evaluation.py
kg_rag/utils/: document_loader.py  evaluator.py  graph_transformers.py  graph_utils.py  prompts.py
reference_implementations/sec-10-q/: README.md  baseline-rag-cot-script.py  baseline-rag-cot.ipynb  baseline-rag-script.py  baseline-rag.ipynb  graphrag-script.py  graphrag.ipynb  kg-rag-cypher-script.py  kg-rag-cypher.ipynb  kg-rag-entity-v2.ipynb  kg-rag-entity-v2.py  kg-rag-entity-v3.ipynb  kg-rag-entity.ipynb  pdf_processor.py  visualizer.py
scripts/: build_baseline_vectordb.py  build_cypher_graph.py  build_entity_graph.py  build_graphrag.py  evaluate_baseline_rag.py  generate_synthetic_data.py  kg_rag_cypher.py  run.sh  run_baseline_rag.py  run_cypher_rag.py  run_entity_rag.py
scripts/Day 2- Efficient LLMs/: 0_Introduction_to_LMs.ipynb  1-Efficient Transformers- A Practical Guide - part 1.ipynb  1-Efficient Transformers- A Practical Guide - part 2.ipynb  2-Efficient-Local-Inference.py  3-Efficient Finetuning - A Practical Guide.ipynb  check-cuda-version.py  metrics_evaluation.py  powermetrics_log.txt  (+1 more)
(+46 files in other folders)
