[tool.poetry]
name = "bootcamp-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pre-commit = "^3.7.0"
chromadb = "^0.5.23"
openai = "^1.58.1"
pandas = "^2.2.3"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
tiktoken = "^0.8.0"
neo4j = "^5.27.0"
langchain = "^0.3.13"
langchain-neo4j = "^0.2.0"
langchain-openai = "^0.2.13"
langgraph = "^0.2.60"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
langchain-experimental = "^0.3.3"
pypdf = "^5.1.0"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.9"
google-generativeai = "^0.8.4"
langchain-chroma = "^0.2.1"
scipy = "1.12.0"
langchain-graphrag = "^0.0.9"
ragas = "^0.2.12"
spacy = "^3.8.4"
levenshtein = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
